# Playground

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  cmake_setuptools.py  example.c  setup.py  test.tex
include/SDLPlayground/: Graphics.h
src/: Graphics.cpp  Main.cpp  basic_ext.c
src/boost_ext/: CMakeLists.txt
src/boost_ext/src/: boost_ext.cpp
src/cmake_ext/: CMakeLists.txt  cmake_ext.c  cmake_setuptools.py
src/playground/: ext1.c
src/skbuild_ext/: CMakeLists.txt  setup.py
src/skbuild_ext/src/: skbuild_ext.c
